# swagger/controllers/Messages.js
@@ -13,3 +13,15 @@ module.exports.getMessages = function getMessages (req, res, next) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.sendMessage = function sendMessage (req, res, next) {
+  var body = req.swagger.params['body'].value;
+  var userId = req.swagger.params['userId'].value;
+  Messages.sendMessage(body,userId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
